--- a/src/styles/BEM/card.scss
+++ b/src/styles/BEM/card.scss
@@ -108,7 +108,7 @@
   }
 
   &__like {
-    background: url(../../img/icons/fav_btn.svg) center no-repeat;
+    background: url(../../img/icons/liked-items.svg) center no-repeat;
     height: 100%;
     width: 40px;
     border: 1px solid $GreyElementsBorder;
