--- a/src/App.scss
+++ b/src/App.scss
@@ -13,9 +13,29 @@
 @import "./styles/BEM/category-item.scss";
 @import "new-models";
 @import "./styles/BEM/footer.scss";
+@import "phones";
+@import "./styles/BEM/path.scss";
+@import "./styles/BEM/sort.scss";
 
 body {
   font-family: Mont, sans-serif;
   font-size: 14px;
-  font-weight: normal;
+  font-weight: 600;
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
+.border {
+  display: flex;
+  align-items: center;
+  border: 2px solid grey;
+  width: 100%;
+  justify-content: center;
+  max-width: 1440px;
+  background: $GreyShadows;
+  height: 150px;
+  font-size: 40px;
+  font-weight: 900;
 }
