--- a/src/styles/BEM/footer.scss
+++ b/src/styles/BEM/footer.scss
@@ -1,4 +1,8 @@
 .footer {
+  box-shadow: 0 -1px 0 $GreyShadows;
+  max-width: 1440px;
+  margin: 40px auto 0;
+  height: 100px;
 
   &__logo {
     width: 50px;
@@ -9,6 +13,7 @@
     display: flex;
     align-items: baseline;
     position: relative;
+    
   }
 
   &__info {
@@ -22,7 +27,16 @@
     letter-spacing: 0.04em;
     text-transform: uppercase;
     color: $GreySecondary;
+    
+    &_link {
+      transition: color $transitionTime;
+
+      &:hover {
+        color: $GreyPrimary;
+      }
+    }
   }
+
 
   &__to-top {
     display: flex;
@@ -31,6 +45,12 @@
     font-size: 12px;
     line-height: 15px;
     color: $GreySecondary;
+
+    transition: color $transitionTime;
+
+    &:hover {
+      color: $GreyPrimary;
+    }
   }
 
   &__btn-top {
