--- a/src/styles/BEM/switcher.scss
+++ b/src/styles/BEM/switcher.scss
@@ -9,20 +9,45 @@
   transition: background-color $transitionTime;
   background-color: white;
   cursor: pointer;
+  outline: none;
 
   &:hover {
     background-color: $GreyHoverBackground;
   }
 
   &_left {
-    height: 10px;
-    width: 100%;
+    height: 32px;
+    width: 32px;
     background: url(../../img/elements/arrow-left.svg) center no-repeat;
   }
 
   &_right {
-    height: 10px;
-    width: 100%;
+    height: 32px;
+    width: 32px;
     background: url(../../img/elements/arrow-right.svg) center no-repeat;
+  }
+
+  &__pages {
+    // margin: 0 auto;
+    // width: 152px;
+    display: flex;
+    justify-content: center;
+    
+    &_page {
+      &:first-child {
+        margin-left: 16px;
+      }
+
+      margin-right: 8px;
+
+      &:last-child {
+        margin-right: 16px;
+      }
+
+      &_active {
+        color: white;
+        background-color: $GreyPrimary;
+      }
+    }
   }
 }
